apps/dex/service-patch.yaml
# Kustomize patch to add loadBalancerClass for Tailscale
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
spec:
  loadBalancerClass: tailscale
