apps/dex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  namespace: dex
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: dex
      port:
        number: 5556
  tls:
    - hosts:
        - dex
